[package]
name = "parasite"
version = "1.0.0-beta.2"
edition = "2021"
description = "Open-source, graph-based OSINT & web-reconnaissance toolkit — a free alternative to Maltego"
license = "MIT"
readme = "README.md"
keywords = ["osint", "reconnaissance", "maltego", "security", "graph"]
categories = ["command-line-utilities"]

[[bin]]
name = "parasite"
path = "src/main.rs"

[[bin]]
name = "parasitephp"
path = "src/gui_main.rs"

[dependencies]
tokio      = { version = "1",    features = ["full"] }
tokio-util = { version = "0.7" }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream", "json", "socks"] }
scraper    = "0.20"
url        = "2"
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
crossterm  = "0.28"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap    = "6"
chrono     = { version = "0.4",  features = ["serde"] }
futures    = "0.3"
regex      = "1"
sha2                = "0.10"
md-5                = "0.10"
sha1                = "0.10"
base64              = "0.22"
tokio-tungstenite   = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
hickory-resolver    = "0.24"
image               = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zip                 = { version = "2", default-features = false, features = ["deflate"] }

eframe              = { version = "0.29", default-features = true }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
